--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <h1>Crea la tua Pixel Artina!</h1>
+    <h1>Crea la tua Pixel Art!</h1>
     <div class="controls">
         <div class="btns">
             <input id="colorPicker" type="color">
