--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <h1>Crea la tua Pixel Artz!</h1>
+    <h1>Crea la tua Pixel Artzz!</h1>
     <div class="controls">
         <div class="btns">
             <input id="colorPicker" type="color">
@@ -36,7 +36,7 @@
 
 
 
-    <script src="pixelArt.js?v=1.0"></script>
+    <script src="pixelArt.js?v=1.1"></script>
 </body>
 
 
