--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+
     <link rel="stylesheet" href="pixelArt.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/classic.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -15,7 +19,7 @@
 </head>
 
 <body>
-    <h1>Crea la tua Pixel Artzz!</h1>
+    <h1>Crea la tua Pixel Art!</h1>
     <div class="controls">
         <div class="btns">
             <input id="colorPicker" type="color">
@@ -36,7 +40,7 @@
 
 
 
-    <script src="pixelArt.js?v=1.1"></script>
+    <script src="pixelArt.js?v=1.0"></script>
 </body>
 
 
